--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,9 @@ Login
 
 {% block main %}
 <form action="{{ url_for('login') }}" method="post">
-    <input type="text" name="username">
-    <input type="password" name="password">
+    <input required type="text" name="username">
+    <input required type="password" name="password">
     <button type="submit">Enviar</button>
 </form>
+<button><a href="{{ url_for('register') }}">Create Account</a></button>
 {% endblock %}
